<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scan_tutup_botol2">

    <RelativeLayout
        android:id="@+id/group_385"
        android:layout_width="220dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:background="@drawable/back"
            android:onClick="HomePage"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/scan_tutup_"
            android:layout_width="198dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="3sp"
            android:text="@string/scan_tutup_"
            android:textAppearance="@style/scan_tutup_" />

    </RelativeLayout>

    <View
        android:id="@+id/freestocks_"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/org2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_385" />


    <TextView
        android:id="@+id/total_tutup"
        android:layout_width="179dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/total_tutup"
        android:textAppearance="@style/total_tutup"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/setiap_kali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freestocks_"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/setiap_kali"
        android:layout_width="267dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/setiap_kali"
        android:textAppearance="@style/setiap_kali"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="265dp"
        android:layout_height="237dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/tucod"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/btn_main2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="79dp" />

    <RelativeLayout
        android:id="@+id/group_386"
        android:layout_width="223dp"
        android:layout_height="38dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/frame_3670"
        android:layout_width="319dp"
        android:layout_height="122dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group_386">


    </RelativeLayout>

    <Button
        android:id="@+id/btn_main2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/btn_main2"
        android:fontFamily="@font/montserratregular"
        android:onClick="Submit"
        android:text="Submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_main3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_main3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/btn_main3"
        android:fontFamily="@font/montserratregular"
        android:onClick="Cancel"
        android:text="Cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>